--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // for jitpack
     }
 }
 
